agentic-health-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Agentic Health Monitoring System CloudFormation Stack

Parameters:
  LatestAmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2

Resources:

  AgenticHealthSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH HTTP FastAPI React
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5173
          ToPort: 5173
          CidrIp: 0.0.0.0/0

  AgenticHealthEC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/AmazonS3FullAccess

  AgenticHealthInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref AgenticHealthEC2Role

  AgenticHealthEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: !Ref LatestAmiId
      IamInstanceProfile: !Ref AgenticHealthInstanceProfile
      SecurityGroupIds:
        - !GetAtt AgenticHealthSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: AgenticHealthServer
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y

          yum install -y python3 python3-pip
          yum install -y ruby wget git

          curl -fsSL https://rpm.nodesource.com/setup_18.x | bash -
          yum install -y nodejs

          cd /home/ec2-user
          wget https://aws-codedeploy-ap-south-1.s3.ap-south-1.amazonaws.com/latest/install
          chmod +x ./install
          ./install auto

          systemctl start codedeploy-agent
          systemctl enable codedeploy-agent

Outputs:
  InstanceId:
    Description: EC2 Instance ID
    Value: !Ref AgenticHealthEC2Instance

  SecurityGroupId:
    Description: Security Group ID
    Value: !Ref AgenticHealthSecurityGroup
